--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,39 +1,47 @@
-# Flux Backend Dependencies
-# Core FastAPI stack
+# FastAPI and ASGI server
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-
-# Database connections
-neo4j==5.15.0
-qdrant-client>=1.7.1
-redis==5.0.1
-aioredis==2.0.1
-
-# Local LLM inference
-ollama==0.1.7
-httpx==0.25.2
-
-# Data processing
-numpy==1.24.4  # Pinned for consciousness processor compatibility
-pandas==2.1.4
 python-multipart==0.0.6
 
-# Async and utilities
-asyncio-mqtt==0.16.1
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
+# Database and caching
+redis==5.0.1
+neo4j==5.15.0
+qdrant-client==1.7.0
+
+# Scientific computing (NumPy 2.0+)
+numpy>=2.0.0,<3.0.0
+
+# Machine Learning and AI
+openai==1.6.1
+scikit-learn==1.3.2
+
+# Data processing
+pandas==2.1.4
+pydantic==2.5.2
+pydantic-settings==2.1.0
 
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-httpx==0.25.2  # For testing FastAPI
+httpx==0.25.2
 
-# Development
+# Code quality
 black==23.11.0
 flake8==6.1.0
 mypy==1.7.1
 pre-commit==3.6.0
+
+# Utilities
+python-jose[cryptography]==3.3.0
+python-dotenv==1.0.0
+aiofiles==23.2.1
+websockets==12.0
+
+# Mathematical processing
+scipy==1.11.4
+sympy==1.12
+
+# Document processing
+PyMuPDF==1.23.9
+python-docx==1.1.0
