--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "flux-frontend",
-  "version": "0.1.0",
-  "description": "Flux - Self-Teaching Consciousness Emulator Frontend",
+  "name": "thoughtseed-pipeline-frontend",
+  "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "type-check": "tsc --noEmit"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "@tanstack/react-query": "^5.8.4",
-    "axios": "^1.6.2",
-    "zustand": "^4.4.7",
     "react-dropzone": "^14.2.3",
-    "react-flow-renderer": "^10.3.17",
-    "d3": "^7.8.5",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "three": "^0.158.0",
+    "@react-three/fiber": "^8.15.12",
+    "@react-three/drei": "^9.88.17",
+    "@types/three": "^0.158.3",
+    "axios": "^1.6.2",
+    "websocket": "^1.0.34",
+    "@types/websocket": "^1.0.10",
+    "zustand": "^4.4.7",
+    "lucide-react": "^0.292.0",
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/d3": "^7.4.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.1",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "prettier": "^3.1.0",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6"
-  },
-  "keywords": ["consciousness", "ai", "learning", "flux"],
-  "author": "",
-  "license": "ISC"
+    "vite": "^5.0.0",
+    "@playwright/test": "^1.40.1",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.8",
+    "ts-jest": "^29.1.1"
+  }
 }
